--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,6 +1,9 @@
+<div class="card text-bg-dark text-center mb-3 " style="max-width;">
 
-  <app-header></app-header>
+<app-header></app-header>
 
-<app-banner></app-banner>
+  <app-banner></app-banner>
 
 <app-footer></app-footer>
+
+</div>
