--- a/FrontEnd/src/app/componentes/banner/banner.component.html
+++ b/FrontEnd/src/app/componentes/banner/banner.component.html
@@ -1,22 +1,3 @@
-<div class="card text-bg-dark text-center mb-3 " style="max-width;">
-
-  <div class="row g-0">
-    <div class="col-md-4 ">
-      <img src="assets/logosPI/fotoperfil.jpg" class="img-fluid rounded-pill rounded-circle border border-white" width="60%"  alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body ">
-        <h5 class="card-title">Castro Rafael Armando</h5>
-        <h6 class="card-title">FULL STACK DEVELOPER JR</h6>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
 <html lang="en">
 <head>
   <style>
@@ -37,8 +18,28 @@
 
 </head>
 
+<div class="card text-bg-dark text-center mb-3 " style="max-width;" id="baner">
 
-<div class="card text-bg-dark text-center mb-3 " style="max-width;">
+  <div class="row g-0">
+    <div class="col-md-4 ">
+      <img src="assets/logosPI/fotoperfil.jpg" class="img-fluid rounded-pill rounded-circle border border-dark" width="60%"  alt="...">
+    </div>
+    <div class="col-md-4">
+      <div class="card-body ">
+        <h1 class="card-title">Castro Rafael Armando</h1>
+        <h2 class="card-title">FULL STACK DEVELOPER JR</h2>
+      </div>
+    </div>
+      <div class="col-md-4">
+      <div class="card-body">
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+      </div>
+  </div>
+</div>
+
+<div class="card text-bg-dark text-center mb-3" style="max-width;">
 
   <div class="container px-4 py-4" id="custom-cards">
 
@@ -88,7 +89,7 @@
       </div>
 
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+        <div class="card card-cover h-100 overflow-auto text-white bg-dark rounded-5 shadow-lg"
              style="background-image: url('assets/banner/card4.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here</h2>
