--- a/FrontEnd/src/app/componentes/banner/banner.component.css
+++ b/FrontEnd/src/app/componentes/banner/banner.component.css
@@ -1,3 +1,10 @@
 #baner{
-  padding-top: 40px;
+  padding-top: 20px;
+  margin-top: 5%;
+  text-align: center;
+}
+#banerNyA{
+  margin-top: 10%;
+  padding-top: 5%;
+
 }
