--- a/FrontEnd/src/app/componentes/banner/banner.component.html
+++ b/FrontEnd/src/app/componentes/banner/banner.component.html
@@ -1,32 +1,12 @@
 <html lang="en">
-<head>
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-  </style>
-
-</head>
-
 <div class="card text-bg-dark text-center mb-3 " style="max-width;" id="baner">
-
   <div class="row g-0">
-    <div class="col-md-4 ">
-      <img src="assets/logosPI/fotoperfil.jpg" class="img-fluid rounded-pill rounded-circle border border-dark" width="60%"  alt="...">
+    <div class="col-md-4">
+      <img src="assets/logosPI/fotoperfil.jpg" class="img-fluid rounded-pill rounded-circle border border-dark" width="60%"  alt="..." id="perfil">
     </div>
     <div class="col-md-4">
-      <div class="card-body ">
-        <h1 class="card-title">Castro Rafael Armando</h1>
+      <div class="card-body">
+        <h1 class="card-title" id="bannerNyA">Castro Rafael Armando</h1>
         <h2 class="card-title">FULL STACK DEVELOPER JR</h2>
       </div>
     </div>
@@ -40,9 +20,7 @@
 </div>
 
 <div class="card text-bg-dark text-center mb-3" style="max-width;">
-
   <div class="container px-4 py-4" id="custom-cards">
-
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
       <div class="col">
         <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
@@ -68,7 +46,7 @@
 
       <div class="col">
         <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-             style="background-image: url('assets/banner/card2.jpg');">
+             style="background-image: url('assets/banner/card3.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Much longer title that wraps to multiple lines</h2>
             <ul class="d-flex list-unstyled mt-auto">
@@ -90,7 +68,7 @@
 
       <div class="col">
         <div class="card card-cover h-100 overflow-auto text-white bg-dark rounded-5 shadow-lg"
-             style="background-image: url('assets/banner/card4.jpg');">
+             style="background-image: url('assets/banner/card2.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here</h2>
             <ul class="d-flex list-unstyled mt-auto">
@@ -111,9 +89,6 @@
       </div>
     </div>
   </div>
-
-
 </div>
-
 </html>
 
