--- a/FrontEnd/src/app/componentes/header/header.component.html
+++ b/FrontEnd/src/app/componentes/header/header.component.html
@@ -1,16 +1,12 @@
 <!doctype html>
 <html lang="en" class="h-100">
 <head>
-
   <style>
-
-
     @media (min-width: 768px) {
       .bd-placeholder-img-lg {
         font-size: 3.5rem;
       }
     }
-
     .bi {
       vertical-align: -.125em;
       fill: currentColor;
@@ -26,24 +22,21 @@
       -webkit-overflow-scrolling: touch;
     }
   </style>
-
-  <!-- Custom styles for this template -->
-
 </head>
+<div class="row">
 <body class="d-flex h-100 text-center text-bg-dark">
-
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-  <header class="mb-auto">
+  <header class="mb-auto ">
     <div>
       <h3 class="float-md-start mb-0">
         <a class="navbar-brand" href="https://www.argentina.gob.ar/produccion/transformacion-digital-
-                                        y-economia-del-conocimiento/argentina-programa"  target="_blank">
+                                        y-economia-del-conocimiento/argentina-programa" target="_blank">
           <img src="assets/logosPI/argprograma.png" width="150" height="100" id="logoAP">
         </a>
         #YoProgramo
       </h3>
 
-      <nav class="nav nav-masthead justify-content-center float-md-end ">
+      <nav class="nav nav-masthead justify-content-center float-md-end align-items-center">
 
         <a class="nav-link fw-bold py-3 px-1 active" aria-current="page" href="www.linkedin.com/in/rafael-ar-castro" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" color="white" width="40" height="40"
@@ -74,8 +67,6 @@
   </header>
 
   <main class="px-4">
-
-
     <div id="carousel" class="carousel carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -114,10 +105,8 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-
   </main>
-
-
 </div>
 </body>
+</div>
 </html>
