--- a/FrontEnd/src/app/componentes/banner/banner.component.html
+++ b/FrontEnd/src/app/componentes/banner/banner.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-md-4">
       <div class="card-body">
-        <h1 class="card-title" id="bannerNyA">Castro Rafael Armando</h1>
+        <h1 class="card-title" id="nombre">{{persona.nombre}} {{persona.img}} Castro</h1>
         <h2 class="card-title">FULL STACK DEVELOPER JR</h2>
       </div>
     </div>
