--- a/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
@@ -5,8 +5,8 @@
       <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <img src="assets/logosPI/fotoperfil.jpg" id="foto" class="img-fluid">
       </div>
-      <div class="col-xs-12 col-sm-2 col-md-3 col-lg-4" id="nombre">
-       <p class="fs-5"> Castro Rafael Armando</p>
+      <div class="col-xs-12 col-sm-2 col-md-3 col-lg-4">
+       <p class="fs-5" id="nombre"> ---------</p>
         <p class="fs-5"> Full Stack Developer Jr</p>
        </div>
 
@@ -15,6 +15,7 @@
         <h1>
           ACERCA DE MI
         </h1>
+
 
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
