botones de edicion
componente experiencia botones de edicion y borrar

--- a/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
@@ -1,28 +1,25 @@
+<html lang="en">
+<div class="card text-bg-dark text-center mb-3 " style="max-width;" id="baner">
 
-
-
-  <div class="row">
-      <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src="assets/logosPI/fotoperfil.jpg" id="foto" class="img-fluid">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <img src="assets/logosPI/fotoperfil2.jpg" class="img-fluid rounded-5" width="80%"  alt="..." id="perfil">
+    </div>
+    <div class="col-md-4">
+      <div class="card-body" style="padding-top: 55px;">
+        <h1 class="card-title" id="nombre" style="font-family: 'cursive';">{{persona.nombre}} {{persona.apellido}} Rafael Armando Castro</h1>
+        <h2 class="card-title" style="font-family: 'cursive';">FULL STACK DEVELOPER JR</h2>
       </div>
-      <div class="col-xs-12 col-sm-2 col-md-3 col-lg-4">
-       <p class="fs-5" id="nombre"> ---------</p>
-        <p class="fs-5"> Full Stack Developer Jr</p>
-       </div>
-
-    <div class="col-xs-12 col-sm-2 col-md-6 col-lg-8">
-      <span>
-        <h1>
-          ACERCA DE MI
-        </h1>
-
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Corporis illum incidunt voluptatibus. Aspernatur eveniet
-          illo illum impedit iusto maiores maxime minus reiciendis
-          rerum veritatis. Distinctio dolorem hic itaque laborum maiores.
+    </div>
+    <div class="col-md-4">
+      <div class="card-body">
+        <p class="card-text" style="font-family: 'cursive';" style="padding-top: 10px;">Nací en La Quiaca - Jujuy un 28 de agosto de 1990, hace
+          32 años. Soy estudiante avanzado de Ingeniera Electrónica en la Universidad Nacional de Córdoba. Me capacite como desarrollador
+          web en el programa “Argentina Programa”. Actualmente estoy profundizando mis conocimientos en BackEnd.-
         </p>
-      </span>
+
+      </div>
     </div>
   </div>
+</div>
+
