--- a/FrontEnd/src/app/componentes/banner/banner.component.html
+++ b/FrontEnd/src/app/componentes/banner/banner.component.html
@@ -1,94 +1,28 @@
 <html lang="en">
 <div class="card text-bg-dark text-center mb-3 " style="max-width;" id="baner">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="assets/logosPI/fotoperfil.jpg" class="img-fluid rounded-pill rounded-circle border border-dark" width="60%"  alt="..." id="perfil">
-    </div>
-    <div class="col-md-4">
+
+ <div class="row g-0">
+   <div class="col-md-4">
+      <img src="assets/logosPI/fotoperfil2.jpg" class="img-fluid rounded-5" width="80%"  alt="..." id="perfil">
+   </div>
+   <div class="col-md-4">
+      <div class="card-body" style="padding-top: 55px;">
+        <h1 class="card-title" id="nombre" style="font-family: 'cursive';">{{persona.nombre}} {{persona.apellido}} Rafael Armando Castro</h1>
+        <h2 class="card-title" style="font-family: 'cursive';">FULL STACK DEVELOPER JR</h2>
+      </div>
+   </div>
+   <div class="col-md-4">
       <div class="card-body">
-        <h1 class="card-title" id="nombre">{{persona.nombre}} {{persona.img}} Castro</h1>
-        <h2 class="card-title">FULL STACK DEVELOPER JR</h2>
+        <p class="card-text" style="font-family: 'cursive';" style="padding-top: 10px;">Nací en La Quiaca - Jujuy un 28 de agosto de 1990, hace
+          32 años. Soy estudiante avanzado de Ingeniera Electrónica en la Universidad Nacional de Córdoba. Me capacite como desarrollador
+          web en el programa “Argentina Programa”. Actualmente estoy profundizando mis conocimientos en BackEnd.-
+        </p>
+
       </div>
-    </div>
-      <div class="col-md-4">
-      <div class="card-body">
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-      </div>
+   </div>
   </div>
 </div>
 
-<div class="card text-bg-dark text-center mb-3" style="max-width;">
-  <div class="container px-4 py-4" id="custom-cards">
-    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-             style="background-image: url('assets/banner/card1.jpg');">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Short title, long jacket</h2>
-            <ul class="d-flex list-unstyled mt-auto">
-              <li class="me-auto">
-                <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
-              </li>
-              <li class="d-flex align-items-center me-3">
-                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"/></svg>
-                <small>Earth</small>
-              </li>
-              <li class="d-flex align-items-center">
-                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
-                <small>3d</small>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
 
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-             style="background-image: url('assets/banner/card3.jpg');">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Much longer title that wraps to multiple lines</h2>
-            <ul class="d-flex list-unstyled mt-auto">
-              <li class="me-auto">
-                <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
-              </li>
-              <li class="d-flex align-items-center me-3">
-                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"/></svg>
-                <small>Pakistan</small>
-              </li>
-              <li class="d-flex align-items-center">
-                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
-                <small>4d</small>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
 
-      <div class="col">
-        <div class="card card-cover h-100 overflow-auto text-white bg-dark rounded-5 shadow-lg"
-             style="background-image: url('assets/banner/card2.jpg');">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here</h2>
-            <ul class="d-flex list-unstyled mt-auto">
-              <li class="me-auto">
-                <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
-              </li>
-              <li class="d-flex align-items-center me-3">
-                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"/></svg>
-                <small>California</small>
-              </li>
-              <li class="d-flex align-items-center">
-                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
-                <small>5d</small>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</html>
 
