--- a/FrontEnd/src/app/componentes/educacion/educacion.component.html
+++ b/FrontEnd/src/app/componentes/educacion/educacion.component.html
@@ -1,98 +1,73 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <style>
+<div class="container py-4">
+  <div class="text-center"><h1 style="font-family: cursive;">EDUCACIÓN</h1></div>
 
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
+  <!--<article class="postcard dark red">
+   <a class="postcard__img_link" href="#">
+     <img class="postcard__img" src="" alt="Image Title" style="height: 350px" />
+   </a>
+   <div class="postcard__text">
+     <h1 class="postcard__title red"><a href="#">Podcast Title  1</a></h1>
+     <div class="postcard__subtitle small">
+       <time datetime="2020-05-25 12:00:00">
+         <i class="fas fa-calendar-alt mr-2"></i>Mon, May 25th 2020
+       </time>
+     </div>
+     <div class="postcard__bar"></div>
+     <div class="postcard__preview-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, fugiat asperiores inventore beatae accusamus odit minima enim, commodi quia, doloribus eius! Ducimus nemo accusantium maiores velit corrupti tempora reiciendis molestiae repellat vero. Eveniet ipsam adipisci illo iusto quibusdam, sunt neque nulla unde ipsum dolores nobis enim quidem excepturi, illum quos!</div>
+     <ul class="postcard__tagbox">
+       <li class="tag__item"><i class="fas fa-tag mr-2"></i>Podcast</li>
+       <li class="tag__item"><i class="fas fa-clock mr-2"></i>55 mins.</li>
+       <li class="tag__item play red">
+         <a href="#"><i class="fas fa-play mr-2"></i>Play Episode 1</a>
+       </li>
+     </ul>
+   </div>
+ </article>-->
+  <article class="postcard dark green align-items-center">
+    <a class="postcard__img_link" >
+      <img class="postcard__img" src="assets/banner/fcefyn1.jpeg" alt="Image Title" style="width: 350px" />
+    </a>
+    <div class="postcard__text text-center">
+      <h1 class="postcard__title green"><a style="font-family: cursive;" >Estudiante avanzado de Ingeniería Electrónica</a></h1>
 
-
-    .bi {
-      vertical-align: -.125em;
-      fill: currentColor;
-    }
-
-    .nav-scroller .nav {
-      display: flex;
-      flex-wrap: nowrap;
-      padding-bottom: 1rem;
-      margin-top: -1px;
-      overflow-x: auto;
-      text-align: center;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-    }
-  </style>
-</head>
-
-<body>
-<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-  <symbol id="bootstrap" viewBox="0 0 118 94">
-
-    <path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"></path>
-  </symbol>
-
-  <symbol id="people-circle" viewBox="0 0 16 16">
-    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-  </symbol>
-  <symbol id="collection" viewBox="0 0 16 16">
-    <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-11zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1h-7zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6v7zm1.5.5A.5.5 0 0 1 1 13V6a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13z"/>
-  </symbol>
-  <symbol id="toggles2" viewBox="0 0 16 16">
-    <path d="M9.465 10H12a2 2 0 1 1 0 4H9.465c.34-.588.535-1.271.535-2 0-.729-.195-1.412-.535-2z"/>
-    <path d="M6 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 1a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm.535-10a3.975 3.975 0 0 1-.409-1H4a1 1 0 0 1 0-2h2.126c.091-.355.23-.69.41-1H4a2 2 0 1 0 0 4h2.535z"/>
-    <path d="M14 4a4 4 0 1 1-8 0 4 4 0 0 1 8 0z"/>
-  </symbol>
-
-</svg>
-<main>
-  <div class="row">
-  <h1 class="visually-hidden">Features examples</h1>
-
-  <div class="container px-4 py-5 dark bg-dark text-white" id="featured-3">
-    <h2 class="pb-2 border-bottom">Columns with icons</h2>
-    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-      <div class="feature col">
-        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
-        </div>
-        <h2>Featured title</h2>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="icon-link d-inline-flex align-items-center">
-          Call to action
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
-        </a>
+      <div class="postcard__bar">Ingeniería Electrónica, Facultad de Ciencias Exactas Físicas y Naturales, Universidad Nacional de Córdoba.
       </div>
-      <div class="feature col">
-        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
-        </div>
-        <h2>Featured title</h2>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="icon-link d-inline-flex align-items-center">
-          Call to action
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
-        </a>
-      </div>
-      <div class="feature col">
-        <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
-        </div>
-        <h2>Featured title</h2>
-        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-        <a href="#" class="icon-link d-inline-flex align-items-center">
-          Call to action
-          <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
-        </a>
-      </div>
+      <ul class="postcard__tagbox text-start">
+        <li>2012 - Presente</li>
+        <li>Ciudad de Córdoba - Córdoba</li>
+      </ul>
     </div>
-  </div>
-  </div>
-</main>
-</body>
+  </article>
 
-</html>
+  <article class="postcard dark green align-items-center">
+    <a class="postcard__img_link" >
+      <img class="postcard__img" src="assets/banner/esc-normal.jpg" alt="Image Title" style="width: 350px" />
+    </a>
+    <div class="postcard__text text-center">
+      <h1 class="postcard__title green"><a style="font-family: cursive;" >Nivel Secundario Bachiller Común</a></h1>
+      <div class="postcard__preview-txt">Bachiller Común, Escuela Normal Superior “Gendarmería Nacional”.
+      </div>
+      <ul class="postcard__tagbox text-start">
+        <li>2004 - 2008</li>
+        <li>La Quiaca - Jujuy</li>
+
+      </ul>
+    </div>
+  </article >
+
+  <article class="postcard dark green  align-items-center ">
+    <a class="postcard__img_link" >
+      <img class="postcard__img" src="assets/banner/esc86.jpg" alt="Image Title" style="width: 350px" />
+    </a>
+    <div class="postcard__text" style="padding-left: 75px;">
+      <h1 class="postcard__title green text-center "><a style="font-family: cursive;" >Nivel Primario</a></h1>
+      <div class="postcard__preview-txt ">   Escuela N°86 Hipólito Irigoyen</div>
+      <ul class="postcard__tagbox text-start">
+        <li>1996 - 2003</li>
+        <li>La Quiaca - Jujuy</li>
+
+      </ul>
+    </div>
+  </article>
+
+</div>
