--- a/FrontEnd/src/app/componentes/header/header.component.css
+++ b/FrontEnd/src/app/componentes/header/header.component.css
@@ -1,6 +1,11 @@
 #logoAP{
   margin-bottom: 20px;
-}
+  }
 .nav{
   padding: 20px;
+}
+.carousel {
+  border: 5px solid white;
+  border-radius: 1rem;
+
 }
