--- a/FrontEnd/src/app/componentes/header/header.component.html
+++ b/FrontEnd/src/app/componentes/header/header.component.html
@@ -1,45 +1,19 @@
-<!doctype html>
-<html lang="en" class="h-100">
-<head>
-  <style>
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-    .bi {
-      vertical-align: -.125em;
-      fill: currentColor;
-    }
-    .nav-scroller .nav {
-      display: flex;
-      flex-wrap: nowrap;
-      padding-bottom: 1rem;
-      margin-top: -1px;
-      overflow-x: auto;
-      text-align: center;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-    }
-  </style>
-</head>
+
 <div class="row">
 <body class="d-flex h-100 text-center text-bg-dark">
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto ">
     <div>
-      <h3 class="float-md-start mb-0">
-        <a class="navbar-brand" href="https://www.argentina.gob.ar/produccion/transformacion-digital-
-                                        y-economia-del-conocimiento/argentina-programa" target="_blank">
+      <h3 class="float-md-start mb-0" style="font-family: 'cursive';">
+        <a class="navbar-brand" href="#" target="_blank">
           <img src="assets/logosPI/argprograma.png" width="150" height="100" id="logoAP">
         </a>
         #YoProgramo
       </h3>
-
-      <nav class="nav nav-masthead justify-content-center float-md-end align-items-center">
+      <nav class="nav nav-masthead justify-content-center float-md-end align-items-center" >
 
         <a class="nav-link fw-bold py-3 px-1 active" aria-current="page" href="www.linkedin.com/in/rafael-ar-castro" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" color="white" width="40" height="40"
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" color="white" width="40" height="40"
                 class="bi bi-linkedin " viewBox="0 0 18 16">
             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
           </svg>
@@ -57,42 +31,43 @@
           </svg>
         </a>
         <a class="nav-link fw-bold py-3 px-0" href="/login">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
+          <button type="button" class="btn btn-outline-light me-2" style="font-family: 'cursive';" (click)="login()" *ngIf="!isLogged">Ingresar</button>
+          <button type="button" class="btn btn-outline-light me-2" style="font-family: 'cursive';" (click)="onLogOut()" *ngIf="isLogged">Salir</button>
         </a>
         <a class="nav-link fw-bold py-3 px-0" href="#">
-          <button type="button" class="btn btn-warning">Sign-up</button>
+          <button type="button" class="btn btn-outline-light me-2" style="font-family: 'cursive';">Registrarse</button>
         </a>
       </nav>
     </div>
   </header>
 
   <main class="px-4">
-    <div id="carousel" class="carousel carousel slide" data-bs-ride="carousel">
+    <div id="carousel" class="carousel carousel slide" data-bs-ride="carousel" >
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
-      <div class="carousel-inner">
+      <div class="carousel-inner" id="radioFotos" style="font-family: 'cursive';">
         <div class="carousel-item active" data-bs-interval="4000">
-          <img src="/assets/atardecer/atardecer2.jpg" class="d-block w-100" alt="...">
+          <img src="/assets/atardecer/atardecer2.jpg" class="d-block w-100 rounded-4" alt="..." >
           <div class="carousel-caption d-none d-md-block">
-            <h5 class="text-white">First slide label</h5>
-            <p class="text-white">Some representative placeholder content for the first slide.</p>
+            <p class="text-white text-bg-dark rounded-4 opacity-75">Ubicada en el extremo norte del País, rodeada por dos ríos, uno de los cuales es límite con Bolivia. </p>
+            <h5 class="text-white">La Quiaca - Jujuy</h5>
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="4000">
-          <img src="/assets/atardecer/atardecer3.jpg" class="d-block w-100" alt="...">
+          <img src="/assets/atardecer/atardecer3.jpg" class="d-block w-100 rounded-4" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5 class="text-white">Second slide label</h5>
-            <p class="text-white">Some representative placeholder content for the second slide.</p>
+            <p class="text-white text-bg-dark rounded-4 opacity-75" >El clima es semiárido frio, con gran amplitud térmica diaria, característico de toda la región de puna jujeña.</p>
+            <h5 class="text-white">La Quiaca - Jujuy</h5>
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="4000">
-          <img src="/assets/atardecer/atardecer5.jpg" class="d-block w-100" alt="...">
+          <img src="/assets/atardecer/atardecer5.jpg" class="d-block w-100 rounded-4" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5 class="text-white">Third slide label</h5>
-            <p class="text-white">Some representative placeholder content for the third slide.</p>
+            <p class="text-bg-dark rounded-4 opacity-75">Los veranos son frescos, con temperaturas medias por debajo de los 15°C y relativamente húmedos, concentran el 80% de las lluvias anuales.</p>
+            <h5 class="text-white">La Quiaca - Jujuy</h5>
           </div>
         </div>
       </div>
@@ -109,4 +84,4 @@
 </div>
 </body>
 </div>
-</html>
+
