--- a/FrontEnd/src/app/componentes/home/home.component.html
+++ b/FrontEnd/src/app/componentes/home/home.component.html
@@ -1,11 +1,13 @@
 <div class="row">
   <div class="card text-bg-dark mb-3" style="max-width;">
     <app-header></app-header>
-    <app-banner></app-banner>
+    <app-acerca-de></app-acerca-de>
     <app-experiencia></app-experiencia>
     <app-educacion></app-educacion>
     <app-hys></app-hys>
     <app-proyecto></app-proyecto>
     <app-footer></app-footer>
+
+
   </div>
 </div>
