--- a/FrontEnd/src/app/componentes/login/login.component.css
+++ b/FrontEnd/src/app/componentes/login/login.component.css
@@ -1,14 +1,10 @@
-html,
 body {
   height: 100%;
-}
-
-body {
   display: flex;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background-color: #212529 ;
 }
 
 .form-signin {
@@ -21,18 +17,65 @@ body {
 }
 
 .form-signin input[type="email"] {
-  margin-bottom: -1px;
+  margin-bottom: 1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
 .form-signin input[type="password"] {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 
-.logoLogin{
+#logoLogin{
+  width: 100%;
+  height: 35%;
+}
 
 
+/*** ESTILOS BOTÓN SLIDE CLOSE ***/
+.ov-btn-slide-close {
+  background: #212529; /* color de fondo */
+  color: #0d6efd; /* color de fuente */
+  border: 2px solid #0d6efd; /* tamaño y color de borde */
+  border-radius: 5px; /* redondear bordes */
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  display: flex;
+
+}
+.ov-btn-slide-close:before, .ov-btn-slide-close:after {
+  content: "";
+  z-index: -1;
+  position: relative;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  left: -50%;
+  background-color: #0d6efd; /* color de fondo hover */
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.ov-btn-slide-close:after {
+  left: 100%;
+}
+.ov-btn-slide-close:hover {
+  color: #fff; /* color de fuente hover */
+
+}
+.ov-btn-slide-close:hover:before {
+  left: 0;
+}
+.ov-btn-slide-close:hover:after {
+  left: 50%;
+}
+h2{
+  margin-top: 5px;
+
+}
+a{
+  justify-content: center;
 }
