--- a/FrontEnd/src/app/componentes/login/login.component.html
+++ b/FrontEnd/src/app/componentes/login/login.component.html
@@ -1,34 +1,34 @@
 <link href="login.component.css" rel="stylesheet">
 
-<body class="card text-bg-dark mb-3">
+<body class="card  mb-3">
+    <main class="form-signin w-100 m-auto">
 
-<main class="form-signin w-100 m-auto">
-  <form>
-    <div class="position-relative" id="logoLogin">
-      <img class="" src="/assets/logosPI/argprograma.png" alt="" width="160" height="100"></div>
-    <h1 class="h3 mb-3 fw-normal text-center">Please sign in</h1>
+          <img class="" src="/assets/logosPI/argprograma.png" alt="" id="logoLogin">
+          <h2 class="h3 mb-3 fw-normal text-start text-white" style="font-family: cursive;">
+              Ingrese sus datos
+          </h2>
+        <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+          <div class="form-floating text-dark">
+             <input type="email" class="form-control" id="nombreUsuario" [(ngModel)]="nombreUsuario" name="nombreUsuario" required/>
+             <label class="form-label" for="nombreUsuario" style="font-family: cursive;">Usuario</label>
+          </div>
+          <div class="form-floating text-dark">
+              <input type="password" class="form-control" id="password"  [(ngModel)]="password" name="password" required/>
+              <label  class="form-label" for="password" style="font-family: cursive;">Contraseña</label>
+          </div>
 
-    <div class="form-floating text-dark">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
-    </div>
-    <div class="form-floating text-dark">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Password</label>
-    </div>
+          <div class="checkbox mb-3 text-white">
+              <label style="font-family: cursive;">
+                <input type="checkbox" value="remember-me" > Recordarme
+              </label>
+          </div>
+            <button class="btn ov-btn-slide-close btn-primary" type="submit" style="width: 100%;"><a  style="font-family: cursive;">Ingresar</a></button>
+        </form>
+          <!-- <button class="w-100 btn btn-lg btn-primary text-center" type="submit">Ingresar</button> -->
+           <p class="mt-3 mb-2 text-white text-center" style="font-family: cursive;"><a href="#" target="_blank" class="nav-link">¿Olvido su contraseña?</a></p>
+           <p class="mt-3 mb-3 text-white text-center small" style="font-family: cursive;">&copy; 2022 Argentina - Jujuy</p>
 
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-
-    <p class="mt-5 mb-3 text-white text-center">&copy; 2017–2022</p>
-  </form>
-</main>
-
-
-
+    </main>
 </body>
+
 
