--- a/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
+++ b/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <h1>Experiencia laboral</h1>
+  <div class="text-center"><h1 style="font-family: cursive;">EXPERIENCIA LABORAL</h1></div>
   <div class="col-lg-2">
     <button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">
       Nueva Experiencia
@@ -10,21 +10,21 @@
   <div class="col-lg-11">
 
 
-    <table class="table">
+    <table class="table text-white">
       <tbody>
          <tr *ngFor="let Experiencia of expe">
            <td>
-              <h2>{{Experiencia.nombreE}}</h2>
+           <h2>{{Experiencia.nombreE}}</h2>
            </td>
            <td>{{Experiencia.descripcionE}}</td>
            <td *ngIf="isLogged">
              <button class="btn btn-light" routerLink="/editexp/{{Experiencia.id}}">
-                <i class="bi bi-pencil-fill"></i> EDITAR
+             <i class="bi bi-pencil-square"></i>EDITAR
              </button>
            </td>
            <td *ngIf="isLogged">
               <button class="btn btn-danger" (click)="delete(Experiencia.id)">
-                 <i class="bi bi-trash-fill"></i> BORRAR
+                 <i class="bi bi-trash-fill"></i>
               </button>
            </td>
          </tr>
@@ -46,7 +46,7 @@
 
 
 
-<!--
+
 <div class="container py-4">
  <div class="text-center"><h1 style="font-family: cursive;">EXPERIENCIA LABORAL</h1></div>
 
@@ -107,6 +107,6 @@
    </div>
  </article>
 
-</div>  -->
+</div>
 
 
