--- a/FrontEnd/src/app/componentes/educacion/educacion.component.html
+++ b/FrontEnd/src/app/componentes/educacion/educacion.component.html
@@ -18,7 +18,7 @@
         </td>
         <td>{{Educacion.descripcionE}}</td>
         <td *ngIf="isLogged">
-          <button class="btn btn-light" routerLink="/editexp/{{Educacion.id}}">
+          <button class="btn btn-light" routerLink="/editedu/{{Educacion.id}}">
             <i class="bi bi-pencil-square"></i>EDITAR
           </button>
         </td>
